[gd_scene load_steps=8 format=4 uid="uid://qo4u5dmysojn"]

[ext_resource type="Script" uid="uid://byb5cwfhb7y4g" path="res://scripts/main_scr.gd" id="1_xvjay"]
[ext_resource type="Texture2D" uid="uid://gkutqjk63rm7" path="res://assets/bg/Pink - Copy.png" id="2_17xds"]
[ext_resource type="PackedScene" uid="uid://3skfgomeali4" path="res://scenes/explore/player.tscn" id="4_1xn82"]
[ext_resource type="PackedScene" uid="uid://bbb4opbvmy1ms" path="res://scenes/typing/enemy.tscn" id="5_xmbtq"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_icmwa"]
texture = ExtResource("2_17xds")
0:0/size_in_atlas = Vector2i(4, 4)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_fwp1e"]
sources/0 = SubResource("TileSetAtlasSource_icmwa")

[sub_resource type="GDScript" id="GDScript_vuroh"]
script/source = "extends Label

var score := 0
var amount := 1

func increment_score(amt):
	score += amt
	$\".\".text = \"Score:\"+str(score)



func _on_main_correct_ans_signal():
	increment_score(1)
"

[node name="test" type="Node2D"]
script = ExtResource("1_xvjay")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AADd/+z/AAAAAAAAAADh/+z/AAAAAAAAAADl/+z/AAAAAAAAAADp/+z/AAAAAAAAAADt/+z/AAAAAAAAAADx/+z/AAAAAAAAAAD1/+z/AAAAAAAAAAD5/+z/AAAAAAAAAAD9/+z/AAAAAAAAAAABAOz/AAAAAAAAAAAFAOz/AAAAAAAAAAAJAOz/AAAAAAAAAAANAOz/AAAAAAAAAAARAOz/AAAAAAAAAAAVAOz/AAAAAAAAAAAZAOz/AAAAAAAAAAAdAOz/AAAAAAAAAAAhAOz/AAAAAAAAAAAlAOz/AAAAAAAAAADd//D/AAAAAAAAAADh//D/AAAAAAAAAADl//D/AAAAAAAAAADp//D/AAAAAAAAAADt//D/AAAAAAAAAADx//D/AAAAAAAAAAD1//D/AAAAAAAAAAD5//D/AAAAAAAAAAD9//D/AAAAAAAAAAABAPD/AAAAAAAAAAAFAPD/AAAAAAAAAAAJAPD/AAAAAAAAAAANAPD/AAAAAAAAAAARAPD/AAAAAAAAAAAVAPD/AAAAAAAAAAAZAPD/AAAAAAAAAAAdAPD/AAAAAAAAAAAhAPD/AAAAAAAAAAAlAPD/AAAAAAAAAADd//T/AAAAAAAAAADh//T/AAAAAAAAAADl//T/AAAAAAAAAADp//T/AAAAAAAAAADt//T/AAAAAAAAAADx//T/AAAAAAAAAAD1//T/AAAAAAAAAAD5//T/AAAAAAAAAAD9//T/AAAAAAAAAAABAPT/AAAAAAAAAAAFAPT/AAAAAAAAAAAJAPT/AAAAAAAAAAANAPT/AAAAAAAAAAARAPT/AAAAAAAAAAAVAPT/AAAAAAAAAAAZAPT/AAAAAAAAAAAdAPT/AAAAAAAAAAAhAPT/AAAAAAAAAAAlAPT/AAAAAAAAAADd//j/AAAAAAAAAADh//j/AAAAAAAAAADl//j/AAAAAAAAAADp//j/AAAAAAAAAADt//j/AAAAAAAAAADx//j/AAAAAAAAAAD1//j/AAAAAAAAAAD5//j/AAAAAAAAAAD9//j/AAAAAAAAAAABAPj/AAAAAAAAAAAFAPj/AAAAAAAAAAAJAPj/AAAAAAAAAAANAPj/AAAAAAAAAAARAPj/AAAAAAAAAAAVAPj/AAAAAAAAAAAZAPj/AAAAAAAAAAAdAPj/AAAAAAAAAAAhAPj/AAAAAAAAAAAlAPj/AAAAAAAAAADd//z/AAAAAAAAAADh//z/AAAAAAAAAADl//z/AAAAAAAAAADp//z/AAAAAAAAAADt//z/AAAAAAAAAADx//z/AAAAAAAAAAD1//z/AAAAAAAAAAD5//z/AAAAAAAAAAD9//z/AAAAAAAAAAABAPz/AAAAAAAAAAAFAPz/AAAAAAAAAAAJAPz/AAAAAAAAAAANAPz/AAAAAAAAAAARAPz/AAAAAAAAAAAVAPz/AAAAAAAAAAAZAPz/AAAAAAAAAAAdAPz/AAAAAAAAAAAhAPz/AAAAAAAAAAAlAPz/AAAAAAAAAADd/wAAAAAAAAAAAADd/wQAAAAAAAAAAADd/wgAAAAAAAAAAADd/wwAAAAAAAAAAADd/xAAAAAAAAAAAADh/wAAAAAAAAAAAADh/wQAAAAAAAAAAADh/wgAAAAAAAAAAADh/wwAAAAAAAAAAADh/xAAAAAAAAAAAADl/wAAAAAAAAAAAADl/wQAAAAAAAAAAADl/wgAAAAAAAAAAADl/wwAAAAAAAAAAADl/xAAAAAAAAAAAADp/wAAAAAAAAAAAADp/wQAAAAAAAAAAADp/wgAAAAAAAAAAADp/wwAAAAAAAAAAADp/xAAAAAAAAAAAADt/wAAAAAAAAAAAADt/wQAAAAAAAAAAADt/wgAAAAAAAAAAADt/wwAAAAAAAAAAADt/xAAAAAAAAAAAADx/wAAAAAAAAAAAADx/wQAAAAAAAAAAADx/wgAAAAAAAAAAADx/wwAAAAAAAAAAADx/xAAAAAAAAAAAAD1/wAAAAAAAAAAAAD1/wQAAAAAAAAAAAD1/wgAAAAAAAAAAAD1/wwAAAAAAAAAAAD1/xAAAAAAAAAAAAD5/wAAAAAAAAAAAAD5/wQAAAAAAAAAAAD5/wgAAAAAAAAAAAD5/wwAAAAAAAAAAAD5/xAAAAAAAAAAAAD9/wAAAAAAAAAAAAD9/wQAAAAAAAAAAAD9/wgAAAAAAAAAAAD9/wwAAAAAAAAAAAD9/xAAAAAAAAAAAAABAAAAAAAAAAAAAAABAAQAAAAAAAAAAAABAAgAAAAAAAAAAAABAAwAAAAAAAAAAAABABAAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAwAAAAAAAAAAAAFABAAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAwAAAAAAAAAAAAJABAAAAAAAAAAAAANAAAAAAAAAAAAAAANAAQAAAAAAAAAAAANAAgAAAAAAAAAAAANAAwAAAAAAAAAAAANABAAAAAAAAAAAAARAAAAAAAAAAAAAAARAAQAAAAAAAAAAAARAAgAAAAAAAAAAAARAAwAAAAAAAAAAAARABAAAAAAAAAAAAAVAAAAAAAAAAAAAAAVAAQAAAAAAAAAAAAVAAgAAAAAAAAAAAAVAAwAAAAAAAAAAAAVABAAAAAAAAAAAAAZAAAAAAAAAAAAAAAZAAQAAAAAAAAAAAAZAAgAAAAAAAAAAAAZAAwAAAAAAAAAAAAZABAAAAAAAAAAAAAdAAAAAAAAAAAAAAAdAAQAAAAAAAAAAAAdAAgAAAAAAAAAAAAdAAwAAAAAAAAAAAAdABAAAAAAAAAAAAAhAAAAAAAAAAAAAAAhAAQAAAAAAAAAAAAhAAgAAAAAAAAAAAAhAAwAAAAAAAAAAAAhABAAAAAAAAAAAAAlAAAAAAAAAAAAAAAlAAQAAAAAAAAAAAAlAAgAAAAAAAAAAAAlAAwAAAAAAAAAAAAlABAAAAAAAAAAAADd/xQAAAAAAAAAAADh/xQAAAAAAAAAAADl/xQAAAAAAAAAAADp/xQAAAAAAAAAAADt/xQAAAAAAAAAAADx/xQAAAAAAAAAAAD1/xQAAAAAAAAAAAD5/xQAAAAAAAAAAAD9/xQAAAAAAAAAAAABABQAAAAAAAAAAAAFABQAAAAAAAAAAAAJABQAAAAAAAAAAAANABQAAAAAAAAAAAARABQAAAAAAAAAAAAVABQAAAAAAAAAAAAZABQAAAAAAAAAAAAdABQAAAAAAAAAAAAhABQAAAAAAAAAAAAlABQAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_fwp1e")

[node name="player" parent="." instance=ExtResource("4_1xn82")]
position = Vector2(-324, 194)
scale = Vector2(4.76, 4.76)

[node name="enemy" parent="." instance=ExtResource("5_xmbtq")]
position = Vector2(-4, 20)
scale = Vector2(8.42704, 8.42704)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="target_text" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = -119.0
offset_top = -231.0
offset_right = 140.0
offset_bottom = 10.0
theme_override_font_sizes/normal_font_size = 46
bbcode_enabled = true
text = "Hello world"
scroll_active = false

[node name="score" type="Label" parent="Control"]
layout_mode = 0
offset_left = -503.0
offset_top = -290.0
offset_right = -267.0
offset_bottom = -212.0
theme_override_font_sizes/font_size = 57
text = "Score:0"
script = SubResource("GDScript_vuroh")

[node name="entry" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = -194.0
offset_top = 140.0
offset_right = 214.0
offset_bottom = 296.0
theme_override_font_sizes/font_size = 108
alignment = 1

[connection signal="correct_ans_signal" from="." to="." method="_on_correct_ans_signal"]
[connection signal="correct_ans_signal" from="." to="enemy" method="_on_main_correct_ans_signal"]
[connection signal="correct_ans_signal" from="." to="Control/score" method="_on_main_correct_ans_signal"]
